[refactor, feat] : authorizeRequests() 수정 , validateToken 예외처리 부분 로깅 처리